deploy-k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubezephyr-backend
  namespace: kubezephyr
  labels:
    app: kubezephyr-backend
spec:
  nodeSelector:
    kubernetes.io/hostname: zephyr-lab4
  containers:
  - name: kubezephyr-backend
    image: zephyrxvxx7/kubezephyr_backend
    resources:
      limits:
        memory: "512Mi"
        cpu: "500m"
    ports:
      - containerPort: 1234
---
apiVersion: v1
kind: Service
metadata:
  name: kubezephyr-backend
  namespace: kubezephyr
spec:
  selector:
    app: kubezephyr-backend
  ports:
  - port: 1234
    targetPort: 1234
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubezephyr-backend-ingress
  namespace: kubezephyr
  annotations:
    # Ingress Controller
    kubernetes.io/ingress.class: nginx
    # CORS
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # cert-manager
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api.zephyr-kubernetes.tech
    secretName: kubezephyr-backend-tls
  rules:
  - host: api.zephyr-kubernetes.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubezephyr-backend
            port:
              number: 1234
